# good-saves

./: .gitignore  LICENSE  README.md  config.json  cookie_handler.py  form_handler.py  http_client.py  logger_config.py  main.py  postdata.json  pyproject.toml  recent_headers.json
config/: __init__.py  config.json  config.sample.json
